# cvailor

./: .env.example  .gitignore  docker-compose.prod.yml  docker-compose.yml  nano.35172.save
cvailor-backend/: .env.docker   .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
cvailor-backend/alembic/: env.py
cvailor-backend/alembic/versions/: 0001_initial_schema.py  0002_user_resumes.py  0003_cv_tailor_history.py
cvailor-backend/app/: main.py
cvailor-backend/app/api/: router.py
cvailor-backend/app/api/v1/: ai.py  ats.py  auth.py  cv_tailor.py  cv_versions.py  cvs.py  dashboard.py  exports.py  resumes.py  (+2 more)
cvailor-backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  logging.py  security.py
cvailor-backend/app/models/: __init__.py  ai_suggestion.py  ats_analysis.py  base.py  cv.py  cv_tailor_history.py  cv_version.py  export_job.py  job_match.py  recommendation_log.py  template.py  user.py  user_resume.py
cvailor-backend/app/repositories/: ai_suggestion.py  ats_analysis.py  base.py  cv.py  cv_tailor_history.py  cv_version.py  export_job.py  template.py  user.py  user_resume.py
cvailor-backend/app/schemas/: ai.py  ats.py  auth.py  common.py  cv.py  cv_tailor.py  cv_version.py  dashboard.py  export.py  resume.py  template.py  user.py
cvailor-backend/app/services/: ai.py  ats.py  auth.py  cv.py  cv_tailor_service.py  cv_version.py  dashboard.py  export.py  recommendation.py  template.py  user.py  user_resume.py
cvailor-backend/app/validators/: __init__.py  cv_tailor_validator.py
cvailor-backend/app/workers/: celery_app.py
cvailor-backend/seeds/: templates.py
cvailor-backend/tests/: conftest.py  test_auth.py  test_cvs.py  test_templates.py
(+7 files in other folders)
